--- a/index.css
+++ b/index.css
@@ -60,3 +60,18 @@
 h3 {
   margin: 0px;
 }
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.shimmer-card {
+  margin: 2px;
+  padding: 5px;
+  width: 250px;
+  height: 350px;
+  background-color: beige;
+  /* animation: shimmer 1s infinite; */
+}
