--- a/index.css
+++ b/index.css
@@ -75,3 +75,14 @@ h3 {
   background-color: beige;
   /* animation: shimmer 1s infinite; */
 }
+
+.signIn-btn {
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 5px 20px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  width: 100%;
+}
