--- a/index.css
+++ b/index.css
@@ -88,10 +88,18 @@ h3 {
 }
 
 .footer {
+  margin: 10px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   background-color: bisque;
   width: auto;
   height: 100px;
+}
+
+.user-class {
+  margin: 10px;
+  padding: 10px;
+
+  background-color: rgb(209, 204, 201);
 }
