--- a/index.css
+++ b/index.css
@@ -1,105 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-.header {
-  display: flex;
-  border: 1px solid none;
-  border-radius: 45px;
-  justify-content: space-between;
-  background-color: bisque;
-}
-
-.logo {
-  margin: 0px;
-  padding: 0px;
-  width: 100px;
-  border: 1px;
-  border-radius: 50%;
-}
-
-.nav > ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav > ul > li {
-  padding: 10px;
-  margin: 10px;
-  list-style: none;
-}
-
-.resturant-cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.res-card {
-  margin: 2px;
-  padding: 5px;
-  width: 250px;
-  /* height: 350px; */
-  background-color: beige;
-}
-
-.res-card:hover {
-  cursor: pointer;
-  border: 1px solid black;
-}
-.res-logo {
-  width: 100%;
-  height: 200px;
-}
-.search {
-  margin: 10px;
-}
-
-h3 {
-  margin: 0px;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.shimmer-card {
-  margin: 2px;
-  padding: 5px;
-  width: 250px;
-  height: 350px;
-  background-color: beige;
-  /* animation: shimmer 1s infinite; */
-}
-
-.signIn-btn {
-  background-color: #4caf50;
-  color: white;
-  padding: 14px 20px;
-  margin: 5px 20px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  width: 100%;
-}
-
-.footer {
-  margin: 10px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: bisque;
-  width: auto;
-  height: 100px;
-}
-
-.user-class {
-  margin: 10px;
-  padding: 10px;
-
-  background-color: rgb(209, 204, 201);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
